fix(core): `DataList` missing paddings inside `Option` (multiline text problem) (#1820)

--- a/projects/core/components/data-list/option/option.style.less
+++ b/projects/core/components/data-list/option/option.style.less
@@ -9,7 +9,6 @@
     align-items: center;
     justify-content: space-between;
     text-align: left;
-    padding: 0 1rem;
     box-sizing: border-box;
     color: var(--tui-text-01);
     outline: none;
@@ -33,18 +32,22 @@
     &[data-size='xs'] {
         font: var(--tui-font-text-s);
         min-height: 2rem + 1rem;
+        padding: 0.3125rem 0.75rem;
     }
 
     &[data-size='s'] {
         min-height: 2rem + 1rem;
+        padding: 0.3125rem 0.75rem;
     }
 
     &[data-size='m'] {
         min-height: 2.75rem + 1rem;
+        padding: 0.375rem 1rem;
     }
 
     &[data-size='l'] {
         min-height: 3.5rem + 1rem;
+        padding: 0.75rem 1rem;
     }
 }
 
